# asterdex-python-sdk

./: .env.local.example  .gitignore  LICENSE  MANIFEST.in  README.md  README_zh.md  TEST_REPORT.md  USAGE.md  pyproject.toml  requirements.txt
docs/: .gitkeep
scripts/: build.py
src/asterdex/: __init__.py  client.py  constants.py  exceptions.py  hybrid_client.py  logging_config.py
src/asterdex/api/: __init__.py  base.py  rate_limiter.py
src/asterdex/api/v1/: __init__.py  auth.py  client.py
src/asterdex/api/v3/: __init__.py  auth.py  client.py
src/asterdex/models/: __init__.py  base.py  ws.py
src/asterdex/utils/: json.py
src/asterdex/websocket/: __init__.py  client.py
tests/: __init__.py
tests/integration/: test_v3_api.py  test_websocket.py  test_websocket_mainnet.py  test_ws_spot.py
tests/unit/: __init__.py  test_auth.py  test_client.py  test_constants.py  test_exceptions.py  test_models.py  test_rate_limiter.py  test_v3_client_extended.py  test_websocket.py  test_websocket_extended.py
